@@ -1,3 +1,8 @@
+Travel::Status::DE::IRIS 1.67 - Tue Jul 26 2022
+
+    * IRIS->new_p: Fix bug in related_stations accessor
+    * Update IRIS station list
+
 Travel::Status::DE::IRIS 1.66 - Sun Jun 26 2022
 
     * Treat Essen-Dellwig and Essen-Dellwig Ost as separate stations.
